# PotentialGap

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  pg_install.rosinstall  pg_plugin.xml  potentialgap.rosinstall  readme.md  tbl_plugin.xml
SuppMat/: abbreviations.md  links_to_algorithm_sections.md  parameters.md  symbols.md
SuppMat/assets/: compTable.tex  gapMerging.tex
cfg/: CollisionChecker.cfg  pg.cfg
config/: boxturtle_potentialgap_local_planner_params.yaml  common_costmap_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  pioneer_common_costmap_params.yaml  potentialgap_local_planner_params.yaml  potentialgap_local_planner_params_holonomic.yaml  potentialgap_local_planner_pf_params.yaml  potentialgap_local_planner_pf_params_holonomic.yaml  teb_local_planner_holonomic_params.yaml  teb_local_planner_params.yaml
demo-worlds/: slide11-figure.world  slide12-figure.world  slide5-figure.world  slide7-figure.world  slide8-figure.world
docs/: pgConfig-usage.dox  pgConfig.dox  pgConfig.wikidoc
include/potential_gap/: bezier.h  gap.h  gap_manip.h  gap_trajectory_generator.h  gap_utils.h  goal_selector.h  helper.h  planner.h  potential_gap.h  potential_gap_ros.h  potential_gap_trajectory_type.h  potentialgap_config.h  robot_geo_parser.h  trajectory_controller.h  trajectory_follower.h  trajectory_scoring.h  utils.h  visualization.h
launch/: egocircle.launch  egoteb_holonomic_controller.launch  egoteb_nonholonomic_controller.launch  potential_gap_gazebo_controller.launch  potential_gap_holonomic_controller.launch  potential_gap_nonholonomic_controller.launch  potential_gap_nonholonomic_controller_gazebo.launch  potential_gap_pf_gazebo_nonholonomic_controller.launch  potential_gap_pf_holonomic_controller.launch  potential_gap_pf_nonholonomic_controller.launch  potential_gapfar_holonomic_controller.launch  potential_gapfar_nonholonomic_controller.launch  stdr_holonomic_campus_laser360_world.launch  stdr_holonomic_campus_laser60_world.launch  stdr_holonomic_campus_laser_world.launch  stdr_holonomic_dense_laser360_world.launch  stdr_holonomic_dense_laser60_world.launch  stdr_holonomic_dense_laser_world.launch  stdr_holonomic_frieburg_laser60.launch  stdr_holonomic_office_laser360_world.launch  stdr_holonomic_office_laser60_world.launch  stdr_holonomic_office_laser_world.launch  stdr_holonomic_sector_laser360_world.launch  stdr_holonomic_sector_laser60_world.launch  stdr_holonomic_sector_laser_world.launch  stdr_nonholonomic_campus_laser360_world.launch  stdr_nonholonomic_campus_laser60_world.launch  stdr_nonholonomic_campus_laser_world.launch  stdr_nonholonomic_dense_laser360_world.launch  stdr_nonholonomic_dense_laser60_world.launch  stdr_nonholonomic_dense_laser_world.launch  stdr_nonholonomic_frieburg_laser60.launch  stdr_nonholonomic_office_laser360_world.launch  stdr_nonholonomic_office_laser60_world.launch  stdr_nonholonomic_office_laser_world.launch  stdr_nonholonomic_sector_laser360_world.launch  stdr_nonholonomic_sector_laser60_world.launch  stdr_nonholonomic_sector_laser_world.launch  teb_holonomic_controller.launch  teb_nonholonomic_controller.launch  (+1 more)
launch/rosbag/: play_pg.launch  play_teb.launch  record.launch
log/: python3_parse_results.py
maps/: campus.pgm  campus.yaml  dense_world.yaml  empty_room_20x20.pgm  empty_room_20x20.yaml  frieburg.pgm  frieburg.yaml  sector_stereo_world.pgm  sector_stereo_world.yaml  sector_world.pgm  sector_world.yaml  sparse_obstacles.pgm  sparse_obstacles.yaml
maps/campus_maps/: 0.pgm  0.yaml  1.pgm  1.yaml  10.pgm  10.yaml  11.pgm  11.yaml  12.pgm  12.yaml  13.pgm  13.yaml  14.pgm  14.yaml  15.pgm  15.yaml  16.pgm  16.yaml  17.pgm  17.yaml  18.pgm  18.yaml  19.pgm  19.yaml  2.pgm  2.yaml  20.pgm  20.yaml  21.pgm  21.yaml  22.pgm  22.yaml  23.pgm  23.yaml  24.pgm  24.yaml  25.pgm  25.yaml  26.pgm  26.yaml  (+160 more)
maps/dense_0.75_maps/: 0.pgm  1.pgm  1.yaml  10.pgm  11.pgm  12.pgm  12.yaml  13.pgm  13.yaml  14.pgm  14.yaml  15.pgm  15.yaml  16.pgm  17.pgm  18.pgm  19.pgm  2.pgm  2.yaml  20.pgm  20.yaml  21.pgm  21.yaml  22.pgm  23.pgm  24.pgm  24.yaml  25.pgm  25.yaml  26.pgm  26.yaml  27.pgm  27.yaml  28.pgm  29.pgm  3.pgm  3.yaml  30.pgm  30.yaml  31.pgm  (+133 more)
maps/dense_maps/: 0.pgm  0.yaml  1.pgm  10.pgm  10.yaml  11.pgm  11.yaml  12.pgm  13.pgm  14.pgm  15.pgm  16.pgm  16.yaml  17.pgm  17.yaml  18.pgm  18.yaml  19.pgm  19.yaml  2.pgm  20.pgm  21.pgm  22.pgm  22.yaml  23.pgm  23.yaml  24.pgm  25.pgm  26.pgm  27.pgm  28.pgm  28.yaml  29.pgm  29.yaml  3.pgm  30.pgm  31.pgm  31.yaml  32.pgm  33.pgm  (+37 more)
maps/fourth_floor_maps/: 0.pgm  0.yaml  1.pgm  1.yaml  10.pgm  10.yaml  11.pgm  11.yaml  12.pgm  12.yaml  13.pgm  13.yaml  14.pgm  14.yaml  15.pgm  15.yaml  16.pgm  16.yaml  17.pgm  17.yaml  18.pgm  18.yaml  19.pgm  19.yaml  2.pgm  2.yaml  20.pgm  20.yaml  21.pgm  21.yaml  22.pgm  22.yaml  23.pgm  23.yaml  24.pgm  24.yaml  25.pgm  25.yaml  26.pgm  26.yaml  (+160 more)
msg/: TrajPlan.msg
rviz/: teb_test.rviz
scripts/: generate_geometry_figures.py  generate_robot_geometry_and_clearing.py  stdr_map_generator.py
scripts/mpc_matlab/: R.m  draw_circle.m  ode_out_without_field_mpc.m  pgCost.m  pgIneConsts.m  vector_field_mpc.m  vector_field_radial_ext_mpc.m  vector_field_time_vary_mpc.m
src/: gap_manip.cpp  gap_trajectory_generator.cpp  gap_utils.cpp  goal_selector.cpp  helper.cpp  planner.cpp  potential_gap.cpp  potential_gap_ros.cpp  potentialgap_config.cpp  robot_geo_parser.cpp  test.cpp  trajectory_controller.cpp  trajectory_follower.cpp  trajectory_scoring.cpp  visualization.cpp
stdr_robots/laser_sensors/: simulated_360_laser.xml  simulated_60_laser.xml
stdr_robots/robots/: holonomic_robot.xml  holonomic_robot.yaml  holonomic_robot_120_bumper.xml  holonomic_robot_180_bumper.xml  holonomic_robot_240_bumper.xml  holonomic_robot_300_bumper.xml  holonomic_robot_360_bumper.xml  holonomic_robot_60_bumper.xml  holonomic_robot_90_bumper.xml  holonomic_robot_bumper.yaml  nonholonomic_robot.yaml  nonholonomic_robot_120_bumper.yaml  nonholonomic_robot_180_bumper.yaml  nonholonomic_robot_240_bumper.yaml  (+4 more)
(+7 files in other folders)
