<?xml version="1.0"?>
<package format="2">
  <name>potential_gap</name>
  <version>0.0.0</version>
  <description>The potential_gap package</description>

  <maintainer email="ruoyangx@gmail.com">Ruoyang Xu</maintainer>


  <license>MIT</license>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>egocircle</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>nav_core</build_depend>
  <!-- <build_depend>benchmarking_tools</build_depend> -->
  <!-- <build_depend>trajectory_generator</build_depend> -->
  <build_depend>pips_trajectory_msgs</build_depend>
  <!-- <build_depend>turtlebot_trajectory_generator</build_depend> -->

  <build_export_depend>base_local_planner</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>egocircle</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <!-- <build_export_depend>benchmarking_tools</build_export_depend> -->
  <!-- <build_export_depend>trajectory_generator</build_export_depend> -->
  <build_export_depend>pips_trajectory_msgs</build_export_depend>
  <!-- <build_export_depend>turtlebot_trajectory_generator</build_export_depend> -->

  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>egocircle</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>nav_core</exec_depend>
  <!-- <exec_depend>benchmarking_tools</exec_depend> -->
  <!-- <exec_depend>trajectory_generator</exec_depend> -->
  <exec_depend>pips_trajectory_msgs</exec_depend>
  <!-- <exec_depend>turtlebot_trajectory_generator</exec_depend> -->

  <depend>pips</depend>
  <depend>pips_trajectory_testing</depend>
  <depend>turtlebot_trajectory_testing</depend>
  <depend>pips_egocylindrical</depend>
  <depend>pips_egocircle</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <nav_core plugin="${prefix}/pg_plugin.xml" />
  </export>
</package>
