<?xml version="1.0"?>
<package format="2">
  <name>potential_gap</name>
  <version>0.0.0</version>
  <description>The potential_gap package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="rxu74@gatech.edu">Alex</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
    <build_depend>message_generation</build_depend>
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
    <build_export_depend>message_generation</build_export_depend>
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
    <exec_depend>message_runtime</exec_depend>
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>egocircle</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>nav_core</build_depend>
  <!-- <build_depend>benchmarking_tools</build_depend> -->
  <build_depend>trajectory_generator</build_depend>
  <build_depend>pips_trajectory_msgs</build_depend>
  <build_depend>turtlebot_trajectory_generator</build_depend>
  <build_depend>trajectory_based_local_planner</build_depend>
  <build_export_depend>base_local_planner</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>egocircle</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <!-- <build_export_depend>benchmarking_tools</build_export_depend> -->
  <build_export_depend>trajectory_generator</build_export_depend>
  <build_export_depend>pips_trajectory_msgs</build_export_depend>
  <build_export_depend>turtlebot_trajectory_generator</build_export_depend>
  <build_export_depend>trajectory_based_local_planner</build_export_depend>
  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>egocircle</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>benchmarking_tools</exec_depend>
  <exec_depend>trajectory_generator</exec_depend>
  <exec_depend>pips_trajectory_msgs</exec_depend>
  <exec_depend>turtlebot_trajectory_generator</exec_depend>
  <exec_depend>trajectory_based_local_planner</exec_depend>

  <depend>pips</depend>
  <depend>pips_trajectory_testing</depend>
  <depend>turtlebot_trajectory_testing</depend>
  <depend>pips_egocylindrical</depend>
  <depend>pips_egocircle</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <trajectory_based_local_planner plugin="${prefix}/tbl_plugin.xml" />
    <nav_core plugin="${prefix}/pg_plugin.xml" />
  </export>
</package>
